--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-around; */
+  text-align: start;
+}
